--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "axios": "^1.3.4",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
+    "recoil": "^0.7.7",
+    "tailwind-scrollbar": "^3.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
