--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "axios": "^1.3.4",
+    "firebase": "^9.18.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "recoil": "^0.7.7",
