--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "recoil": "^0.7.7",
