--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.43.8",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-player": "^2.12.0",
     "recoil": "^0.7.7",
     "tailwind-scrollbar": "^3.0.0",
