--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-player": "^2.12.0",
+    "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
     "tailwind-scrollbar": "^3.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
